# source-localization

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TODO_shell_resolution.md  irl-template.md  pyproject.toml  run_parallel_validation.sh  run_sensitivity_tests.sh  run_validation_batch.sh
configs/: roi_based_sphere.yaml
docs/: REGULARIZATION_SCALING_ISSUE.md
docs/guides/: ELECTRODE_COORDINATE_SETUP.md
reference/: stc_to_eeglab_reference.py
scripts/: 010_test_shell_conditioning.py  011_shell_parameter_sweep.py  012_demo_shell_mri_mapping.py  013_shell_localization_test.py  014_localization_by_depth.py  analyze_condition_numbers.py  analyze_dspm_normalization.py  check_brain_geometry.py  debug_electrode_coords.py  explain_leadfield_strength.py  generate_validation_configs.py  investigate_roi_conditioning.py  localization_error_brain_overlay.py  recalculate_electrode_coords.py  run_key_validations.sh  run_overnight_validation.sh  run_parallel_validation.py  run_validation_campaign.py  test_inverse_localization.py  test_regularization.py  test_source_analysis.py  test_uniform_grid_validation.py  update_roi_configs.py  visualize_dipole_size_results.py  visualize_roi_accuracy_mosaic.py  visualize_validation_heatmap.py
src/source_localization/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/source_localization/bem/: ellipsoid.py  sphere.py
src/source_localization/config/: default_config.yaml
src/source_localization/inverse/: methods.py
src/source_localization/source_analysis/: __init__.py  atlas_lookup.py  cortical_sources.py  roi_analysis.py  source_statistics.py  visualization.py  visualization_connectivity.py  visualization_presets.py  visualization_roi.py
src/source_localization/steps/: __init__.py  (+9 more)
tests/: test_psd_sanity.py
(+45 files in other folders)
