[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "source_localization"
version = "0.2.0"
description = "Mouse EEG source localization pipeline"
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Alex Lexy", email = "metalexy@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "mne>=1.5.0",
    "nibabel>=3.2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "pyvista>=0.38.0",
    "eeglabio>=0.1.2",
]

[project.optional-dependencies]
connectivity = [
    "mne-connectivity>=0.6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "ruff>=0.0.200",
]
all = [
    "mne-connectivity>=0.6.0",
]

[project.scripts]
source-localization = "source_localization.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
source_localization = [
    "config/*.yaml",
    "config/presets/*.yaml",
    "data/atlas/*",
    "data/electrodes/*",
    "validation/config/default_tests/**/*.yaml",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.ruff]
line-length = 100
target-version = "py38"
